# klartext

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  DISCLAIMER.md  README.md
.claude/skills/: README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/best/: Cargo.toml
crates/best/src/: bridge.rs  decode.rs  engine.rs  exchange.rs  exec.rs  gate.rs  lib.rs  machine.rs  opcode.rs  result.rs  telegram.rs
crates/best/tests/: decode_sweep.rs  differential.rs  oracle.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  error.rs  lib.rs  scan.rs  session.rs
crates/hsfz/: Cargo.toml
crates/hsfz/src/: conn.rs  discover.rs  frame.rs  lib.rs
crates/semantic/: Cargo.toml
crates/semantic/src/: catalog.rs  did.rs  dtc.rs  identity.rs  lib.rs  measurement.rs  pid.rs  service_function.rs  snapshot.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  phase.rs  precondition.rs  runner.rs
crates/sgbd/: Cargo.toml
crates/sgbd/src/: cp1252.rs  lib.rs  prg.rs
crates/uds/: Cargo.toml
crates/uds/src/: dtc.rs  identity.rs  lib.rs  nrc.rs  service.rs
docbuild/: Cargo.toml
docbuild/src/: bordnet.rs  build.rs  fkb.rs  main.rs
docs/: car-session-1-handoff.md  car-session-1-results.md  field-findings-2026-07-03.md  field-findings-2026-07-10-ios.md  on-car-verification-protocol.md  protocol-reference.md  service-functions-findings.md  sgbd-findings.md  sqlite-findings.md  standard-pids.md
docs/superpowers/plans/: 2026-06-25-klartext-mcp-server.md  2026-07-03-live-discovery-dynamic-core.md  2026-07-03-m8-service-function-engine.md  2026-07-04-compact-repair-doc-store-phase1-fkb-spine.md  2026-07-04-m11-repair-doc-catalog.md  2026-07-04-m11-svt-identification.md  2026-07-05-best2-vm-phase1-offline-core.md  2026-07-06-item5-p1-engine-completion.md  2026-07-06-mobile-ios-networking-probe.md  2026-07-07-item5-p2-live-read-path.md  2026-07-18-p3-service-runner.md  2026-07-18-p3-write-tier-foundation.md
docs/superpowers/specs/: 2026-06-25-klartext-mcp-server-design.md  2026-07-03-live-discovery-dynamic-core-design.md  2026-07-03-m11-freeze-frames-design.md  2026-07-03-m11-ista-parity-roadmap.md  2026-07-04-compact-repair-doc-store-design.md  2026-07-04-m11-repair-doc-catalog-design.md  2026-07-04-m11-svt-identification-design.md  2026-07-05-best2-vm-job-engine-design.md  2026-07-06-item5-guided-service-procedures-design.md  2026-07-06-mobile-ios-networking-probe-design.md  2026-07-18-p3-service-write-tier-design.md
ios/: .gitignore  LINUX-BUILD-GUIDE.md  README.md
ios/KlartextHSFZ/: Package.swift
ios/KlartextHSFZ/Sources/KlartextHSFZ/: Hsfz.swift  Ipv4.swift
ios/KlartextHSFZ/Tests/KlartextHSFZTests/: HsfzCodecTests.swift  Ipv4Tests.swift
ios/KlartextProbe/: Info.plist  Package.swift  project.yml  xtool.yml
ios/KlartextProbe/KlartextProbe/: Hsfz.swift  InterfaceInspector.swift  KlartextProbeApp.swift  NWProbe.swift  ProbeView.swift
ios/KlartextProbe/KlartextProbeTests/: HsfzCodecTests.swift
ios/KlartextProbe/Sources/KlartextHSFZ/: Hsfz.swift
ios/KlartextProbe/Sources/KlartextProbe/: InterfaceInspector.swift  KlartextProbeApp.swift  NWProbe.swift  PosixProbe.swift  ProbeLog.swift  ProbeView.swift  UdpIdentProbe.swift
ios/KlartextProbe/Tests/KlartextHSFZTests/: HsfzCodecTests.swift
mcp/: Cargo.toml
mcp/src/: config.rs  dto.rs  ecu.rs  lib.rs  main.rs  profile.rs  server.rs  session.rs
mcp/tests/: integration.rs
scripts/: build-semantic-db.sh
skills/klartext-service/: SKILL.md
