[workspace]
resolver = "3"
members = ["crates/uds", "crates/hsfz", "crates/client", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://gitlab.cherkaoui.ch/HadiCherkaoui/klartext"
authors = ["Hadi Cherkaoui <claude@hide.cherkaoui.ch>"]

[workspace.dependencies]
thiserror = "2.0.18"
tokio = { version = "1.52.3" }
anyhow = "1.0.102"
clap = "4.6.1"
