[package]
name = "klartext-docbuild"
description = "Build-only tool: renders the compact repair-doc store (klartext-docs.db) from plaintext BYO-data DBs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
flate2 = "1.1.9"
quick-xml = "0.41.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror.workspace = true
