[package]
name = "klartext-mcp"
description = "Read-only stdio MCP server exposing klartext's BMW diagnostic reads as tools."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "klartext-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
klartext-client = { version = "0.1.0", path = "../crates/client" }
klartext-hsfz = { version = "0.1.0", path = "../crates/hsfz" }
klartext-semantic = { version = "0.1.0", path = "../crates/semantic" }
klartext-uds = { version = "0.1.0", path = "../crates/uds" }
rmcp = { version = "1", features = ["server", "macros", "transport-io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-std", "sync", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
klartext-sgbd = { path = "../crates/sgbd" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
tempfile = "3.27.0"
